# astrolabe-mcp

./: .gitignore  .mcp.example.json  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml
.claude/: settings.local.example.json
docs/: ARCHITECTURE.md  CONCEPT.md
docs/archive/2026-03-06_mvp/: PLAN.md
docs/archive/2026-03-06_v0.2.0_mvp/: PROGRESS.md
docs/archive/2026-03-07_sync/: ASTROLABE-SYNC-001.md  PLAN.md  PROGRESS.md
docs/archive/2026-03-07_v0.2.3_refactor-tools/: PLAN.md  PROGRESS.md
docs/archive/2026-03-08_hash-stale/: PLAN.md  PROGRESS.md
docs/archive/2026-03-08_sqlite-storage/: PLAN.md  PROGRESS.md
docs/archive/2026-03-09_v0.4.0-private-index/: PLAN.md  PROGRESS.md
docs/archive/2026-03-09_v0.5.0_bilingual-search/: ASTROLABE-SEARCH-001.md  PLAN.md  PROGRESS.md
docs/archive/2026-03-10_v0.5.2_desync-visibility/: PLAN.md  PROGRESS.md
docs/archive/2026-03-10_v0.6.0_git-aware-scanning/: PLAN.md  PROGRESS.md
docs/archive/2026-03-10_v0.7.0_tool-output-optimization/: ASTROLABE_AUDIT.md  PLAN.md  PROGRESS.md
docs/archive/2026-03-13_v0.7.2_dublicates_detection/: PLAN.md  PROGRESS.md
docs/specs/: spec_chunker.md  spec_config.md  spec_embeddings.md  spec_index.md  spec_models.md  spec_reader.md  spec_search.md  spec_server.md  spec_storage.md  spec_web.md
runtime/: config.example.json  doc_types.example.yaml
src/astrolabe/: __init__.py  __main__.py  chunker.py  config.py  embeddings.py  embeddings_chroma.py  index.py  models.py  reader.py  search.py  server.py  storage.py  storage_json.py  storage_sqlite.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embeddings.py  test_hybrid_search.py  test_index.py  test_models.py  test_reader.py  test_search.py  test_server.py  test_storage.py  test_web.py
(+28 files in other folders)
