[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrolabe-mcp"
version = "0.8.2"
description = "MCP server for transparent knowledge layer across multiple projects"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "filelock>=3.0",
    "snowballstemmer>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "mistune>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
